--- a/Landing_page/views/landingpage.ejs
+++ b/Landing_page/views/landingpage.ejs
@@ -6,14 +6,17 @@
   <a href="#Loafer">
     <button type="button" class ="btn-main"class="btn btn-primary">Loafer</button>
   </a>
-  <a href="#Derby">
+  <a href= "#Derby">
     <button type="button" class ="btn-main"class="btn btn-primary">Derby</button>
   </a>
-  <a href="#Formal">
+  <a href="#formal">
     <button type="button" class ="btn-main"class="btn btn-primary">Formal</button>
   </a>
   <a href="#Sandals">
     <button type="button" class ="btn-main"class="btn btn-primary">Sandals</button>
+  </a>
+  <a href="#Chappal">
+    <button type="button" class ="btn-main"class="btn btn-primary">Chappal</button>
   </a>
   <a href="#customer_service">
     <button type="button" class ="btn-main"class="btn btn-primary">Contact us</button>
@@ -49,312 +52,29 @@
     </button>
 </div>
 
-<h2 class = "categories" id = "Mocassian">Mocassian</h2>
-<div class="product-card">
-    <div class="product-image">
-      <img src="/Web_Development/Landing_page/backend/images/dow.jpeg" alt="Product Image">
+<% Object.keys(categorizedCards).forEach(category => { %>
+  <section id="#<%= category %>">
+    <h2  class = "categories"><%= category %></h2>
+    <div class="product-list">
+      <% categorizedCards[category].forEach(card => { %>
+        <div class="product-card">
+          <div class="product-image">
+            <img src="<%=card.image%>" alt="Product Image">
+          </div>
+          <div class="product-details">
+            <div class="product-name"><%= card.name %></div>
+            <div class="product-price">
+              <span class="discounted-price"><%= card.discountedPrice %></span>
+              <span class="original-price"><%= card.price %></span>
+              <span class="discount-percentage"><%= card.percentageDiscount %></span>
+            </div>
+            <div class="product-description">ONLINE EXCLUSIVE DISCOUNT</div>
+          </div>
+        </div>
+      <% }); %>
     </div>
-    <div class="product-details">
-      <div class="product-name">Joggers</div>
-      <div class="product-price">
-        <span class="discounted-price">Rs.1,199.00</span>
-        <span class="original-price">Rs.1,499.00</span>
-        <span class="discount-percentage">30%</span>
-      </div>
-      <div class="product-description">ONLINE EXCLUSIVE DISCOUNT</div>
-    </div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-image">
-      <img src="/images/images.jpg" alt="Product Image">
-    </div>
-    <div class="product-details">
-      <div class="product-name">Joggers</div>
-      <div class="product-price">
-        <span class="discounted-price">Rs.1,199.00</span>
-        <span class="original-price">Rs.1,499.00</span>
-        <span class="discount-percentage">30%</span>
-      </div>
-      <div class="product-description">ONLINE EXCLUSIVE DISCOUNT</div>
-    </div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-image">
-      <img src="/images/images.jpg" alt="Product Image">
-    </div>
-    <div class="product-details">
-      <div class="product-name">Joggers</div>
-      <div class="product-price">
-        <span class="discounted-price">Rs.1,199.00</span>
-        <span class="original-price">Rs.1,499.00</span>
-        <span class="discount-percentage">30%</span>
-      </div>
-      <div class="product-description">ONLINE EXCLUSIVE DISCOUNT</div>
-    </div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-image">
-      <img src="/images/dow.jpeg" alt="Product Image">
-    </div>
-    <div class="product-details">
-      <div class="product-name">Joggers</div>
-      <div class="product-price">
-        <span class="discounted-price">Rs.1,199.00</span>
-        <span class="original-price">Rs.1,499.00</span>
-        <span class="discount-percentage">30%</span>
-      </div>
-      <div class="product-description">ONLINE EXCLUSIVE DISCOUNT</div>
-    </div>
-  </div>
-
-  <h2 class = "categories" id ="Loafer">Loafer</h2>
-  <div class="product-card">
-    <div class="product-image">
-      <img src="/images/download.jpeg" alt="Product Image">
-    </div>
-    <div class="product-details">
-      <div class="product-name">Joggers</div>
-      <div class="product-price">
-        <span class="discounted-price">Rs.1,199.00</span>
-        <span class="original-price">Rs.1,499.00</span>
-        <span class="discount-percentage">30%</span>
-      </div>
-      <div class="product-description">ONLINE EXCLUSIVE DISCOUNT</div>
-    </div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-image">
-      <img src="/images/download.jpeg" alt="Product Image">
-    </div>
-    <div class="product-details">
-      <div class="product-name">Joggers</div>
-      <div class="product-price">
-        <span class="discounted-price">Rs.1,199.00</span>
-        <span class="original-price">Rs.1,499.00</span>
-        <span class="discount-percentage">30%</span>
-      </div>
-      <div class="product-description">ONLINE EXCLUSIVE DISCOUNT</div>
-    </div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-image">
-      <img src="/images/download.jpeg" alt="Product Image">
-    </div>
-    <div class="product-details">
-      <div class="product-name">Joggers</div>
-      <div class="product-price">
-        <span class="discounted-price">Rs.1,199.00</span>
-        <span class="original-price">Rs.1,499.00</span>
-        <span class="discount-percentage">30%</span>
-      </div>
-      <div class="product-description">ONLINE EXCLUSIVE DISCOUNT</div>
-    </div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-image">
-      <img src="/images/download.jpeg" alt="Product Image">
-    </div>
-    <div class="product-details">
-      <div class="product-name">Joggers</div>
-      <div class="product-price">
-        <span class="discounted-price">Rs.1,199.00</span>
-        <span class="original-price">Rs.1,499.00</span>
-        <span class="discount-percentage">30%</span>
-      </div>
-      <div class="product-description">ONLINE EXCLUSIVE DISCOUNT</div>
-    </div>
-  </div>
-
-  
-  
-  <h2 class = "categories" id = "Derby">Derby</h2>
-  <div class="product-card">
-    <div class="product-image">
-      <img src="/images/download.jpeg" alt="Product Image">
-    </div>
-    <div class="product-details">
-      <div class="product-name">Joggers</div>
-      <div class="product-price">
-        <span class="discounted-price">Rs.1,199.00</span>
-        <span class="original-price">Rs.1,499.00</span>
-        <span class="discount-percentage">30%</span>
-      </div>
-      <div class="product-description">ONLINE EXCLUSIVE DISCOUNT</div>
-    </div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-image">
-      <img src="/images/download.jpeg" alt="Product Image">
-    </div>
-    <div class="product-details">
-      <div class="product-name">Joggers</div>
-      <div class="product-price">
-        <span class="discounted-price">Rs.1,199.00</span>
-        <span class="original-price">Rs.1,499.00</span>
-        <span class="discount-percentage">30%</span>
-      </div>
-      <div class="product-description">ONLINE EXCLUSIVE DISCOUNT</div>
-    </div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-image">
-      <img src="/images/download.jpeg" alt="Product Image">
-    </div>
-    <div class="product-details">
-      <div class="product-name">Joggers</div>
-      <div class="product-price">
-        <span class="discounted-price">Rs.1,199.00</span>
-        <span class="original-price">Rs.1,499.00</span>
-        <span class="discount-percentage">30%</span>
-      </div>
-      <div class="product-description">ONLINE EXCLUSIVE DISCOUNT</div>
-    </div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-image">
-      <img src="/images/download.jpeg" alt="Product Image">
-    </div>
-    <div class="product-details">
-      <div class="product-name">Joggers</div>
-      <div class="product-price">
-        <span class="discounted-price">Rs.1,199.00</span>
-        <span class="original-price">Rs.1,499.00</span>
-        <span class="discount-percentage">30%</span>
-      </div>
-      <div class="product-description">ONLINE EXCLUSIVE DISCOUNT</div>
-    </div>
-  </div>
-
-  <h2 class = "categories" id = "Formal">Formal</h2>
-  <div class="product-card">
-    <div class="product-image">
-      <img src="/images/download.jpeg" alt="Product Image">
-    </div>
-    <div class="product-details">
-      <div class="product-name">Joggers</div>
-      <div class="product-price">
-        <span class="discounted-price">Rs.1,199.00</span>
-        <span class="original-price">Rs.1,499.00</span>
-        <span class="discount-percentage">30%</span>
-      </div>
-      <div class="product-description">ONLINE EXCLUSIVE DISCOUNT</div>
-    </div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-image">
-      <img src="/images/download.jpeg" alt="Product Image">
-    </div>
-    <div class="product-details">
-      <div class="product-name">Joggers</div>
-      <div class="product-price">
-        <span class="discounted-price">Rs.1,199.00</span>
-        <span class="original-price">Rs.1,499.00</span>
-        <span class="discount-percentage">30%</span>
-      </div>
-      <div class="product-description">ONLINE EXCLUSIVE DISCOUNT</div>
-    </div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-image">
-      <img src="/images/download.jpeg" alt="Product Image">
-    </div>
-    <div class="product-details">
-      <div class="product-name">Joggers</div>
-      <div class="product-price">
-        <span class="discounted-price">Rs.1,199.00</span>
-        <span class="original-price">Rs.1,499.00</span>
-        <span class="discount-percentage">30%</span>
-      </div>
-      <div class="product-description">ONLINE EXCLUSIVE DISCOUNT</div>
-    </div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-image">
-      <img src="/images/download.jpeg" alt="Product Image">
-    </div>
-    <div class="product-details">
-      <div class="product-name">Joggers</div>
-      <div class="product-price">
-        <span class="discounted-price">Rs.1,199.00</span>
-        <span class="original-price">Rs.1,499.00</span>
-        <span class="discount-percentage">30%</span>
-      </div>
-      <div class="product-description">ONLINE EXCLUSIVE DISCOUNT</div>
-    </div>
-  </div>
-
-  <h2 class = "categories" id = "Sandals">Sandals</h2>
-  <div class="product-card">
-    <div class="product-image">
-      <img src="/images/download.jpeg" alt="Product Image">
-    </div>
-    <div class="product-details">
-      <div class="product-name">Joggers</div>
-      <div class="product-price">
-        <span class="discounted-price">Rs.1,199.00</span>
-        <span class="original-price">Rs.1,499.00</span>
-        <span class="discount-percentage">30%</span>
-      </div>
-      <div class="product-description">ONLINE EXCLUSIVE DISCOUNT</div>
-    </div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-image">
-      <img src="/images/download.jpeg" alt="Product Image">
-    </div>
-    <div class="product-details">
-      <div class="product-name">Joggers</div>
-      <div class="product-price">
-        <span class="discounted-price">Rs.1,199.00</span>
-        <span class="original-price">Rs.1,499.00</span>
-        <span class="discount-percentage">30%</span>
-      </div>
-      <div class="product-description">ONLINE EXCLUSIVE DISCOUNT</div>
-    </div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-image">
-      <img src="/images/download.jpeg" alt="Product Image">
-    </div>
-    <div class="product-details">
-      <div class="product-name">Joggers</div>
-      <div class="product-price">
-        <span class="discounted-price">Rs.1,199.00</span>
-        <span class="original-price">Rs.1,499.00</span>
-        <span class="discount-percentage">30%</span>
-      </div>
-      <div class="product-description">ONLINE EXCLUSIVE DISCOUNT</div>
-    </div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-image">
-      <img src="/images/download.jpeg" alt="Product Image">
-    </div>
-    <div class="product-details">
-      <div class="product-name">Joggers</div>
-      <div class="product-price">
-        <span class="discounted-price">Rs.1,199.00</span>
-        <span class="original-price">Rs.1,499.00</span>
-        <span class="discount-percentage">30%</span>
-      </div>
-      <div class="product-description">ONLINE EXCLUSIVE DISCOUNT</div>
-    </div>
-  </div>
+  </section>
+<% }); %>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
