--- a/Landing_page/views/layouts/footer.ejs
+++ b/Landing_page/views/layouts/footer.ejs
@@ -4,7 +4,7 @@
       <div class="col-md-4" >
         <h6 class = "contact-h" id = "customer_service">CUSTOMER SERVICE</h6>
         <ul class="nav flex-column" id = "contact-ul">
-          <li class="contact" class ="cs"><a href="contact-us.ejs" target="_blank" >Contact Us</a></li>
+          <li class="contact" class ="cs"><a href="contact-us" target="_blank" >Contact Us</a></li>
           <li class="contact" class ="cs"><a href="">Exchange Policy</a></li>
           <li class="contact" class ="cs"><a href="" >Claim Policy</a></li>
           <li class="contact" class ="cs"><a href="">Privacy Policy</a></li>
