--- a/Landing_page/views/login.ejs
+++ b/Landing_page/views/login.ejs
@@ -9,6 +9,28 @@
 </head>
 <body>
     <img id = "background" src="/image/Black and White Simple Modern Sportswear Logo.png" alt="">
+    <div class="container">
+        <div class="login-box">
+            <h2>Login</h2>
+
+            <form action="/auth/login" method ="post">
+                <div class="input-box">
+                    <input type="text" name="username" required>
+                    <label>Username</label>
+                </div>
+                <div class="input-box">
+                    <input type="password" name = "password" required>
+                    <label>Password</label>
+                </div>
+                <div class="forgot-pass">
+                    <a href="#">Forgot your password?</a>
+                </div>
+                <button type="submit" class="btn">Login</button>
+                <div class="signup-link">
+                    <a href = "/auth/signup">Signup</a>
+                </div>
+            </form>
+        </div>
     <%- include("layouts/sign.in.up-animation.ejs") %>
 </body>
 </html>
