--- a/Landing_page/views/signup.ejs
+++ b/Landing_page/views/signup.ejs
@@ -8,6 +8,27 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
+    <div class="container">
+        <div class="login-box">
+            <h2>Signup</h2>
+            <form action="/auth/signup" method ="post">
+                <div class="input-box">
+                    <input type="text"  name="username" required>
+                    <label>Username</label>
+                </div>
+                <div class="input-box">
+                    <input type="password" name="password" required>
+                    <label>Password</label>
+                </div>
+                <div class="forgot-pass">
+                    <a href="#">Forgot your password?</a>
+                </div>
+                <button type="submit" class="btn">Signup</button>
+                <div class="signup-link">
+                    <a href = "/auth/login">Login</a>
+                </div>
+            </form>
+        </div>
     <%- include("layouts/sign.in.up-animation.ejs") %>
     <img id = "background-signup" src="image/Black and White Simple Modern Sportswear Logo.png" alt="">
 </body>
